--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -88,9 +88,9 @@
     max-height: 0;
 }
 
-.commentForm:focus-within footer{
-  visibility: visible;
-  max-height: none;
+.commentForm:focus-within footer {
+    visibility: visible;
+    max-height: none;
 }
 
 .commentForm button[type='submit'] {
@@ -106,8 +106,13 @@
     transition: background-color 0.1s;
 }
 
-.commentForm button[type='submit']:hover {
+.commentForm button[type='submit']:not(:disabled):hover {
     background: var(--green-300);
+}
+
+.commentForm button[type='submit']:disabled {
+    opacity: 0.7;
+    cursor: not-allowed;
 }
 
 .commentList {
